Fixed colors contrasts

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
 /* display background dark color on navbar scroll */
 .navbarScroll.navbarDark {
-    background-color: #5b5b5b;
+    background-color: #2e0218cc;
 }
 
 /* hero background image */
